# blaze-db

./: .gitignore  Cargo.toml  README.md  config.toml
benches/: benchmark.rs
sample/: War_and_peace.txt
src/: cli.rs  lib.rs
src/core/: mod.rs  search.rs  vector.rs
src/utils/: embedder.rs  ingestor.rs  mod.rs  reader.rs  storage.rs  writer.rs
tests/: ingestor_tests.rs  integration_tests.rs  provider_tests.rs  storage_tests.rs
