[package]
name = "vector_search"
version = "0.1.0"
edition = "2024"

[lib]
name = "vector_search"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
memmap2 = "0.9.9"
ndarray = "0.17.1"
rayon = "1.11.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
anyhow = "1.0.100"
colored = "3.0.0"
indicatif = "0.18.3"