[package]
name = "blaze-db"
version = "0.1.0"
edition = "2024"

[lib]
name = "blaze_db"
path = "src/lib.rs"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
memmap2 = "0.9.9"
rayon = "1.11.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
anyhow = "1.0.100"
colored = "3.0.0"
indicatif = "0.18.3"
bincode = "1.3.3"
clap = { version = "4.5.46", features = ["derive"] }
axum = "0.8.7"

[dev-dependencies]
bencher = "0.1.5"
tokio = { version = "1.48.0", features = ["full"] }
tempfile = "3.8"